fix: Users -> User
